# augd_guipa-translate

./: LICENSE  README.md  app.py  notebook.ipynb  package-lock.json  pyproject.toml  requirements.txt  teste.py
api/: app.py
api/controller/: __init__.py  test_bp.py  translate_bp.py
guipa-translate/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
guipa-translate/src/: extension.ts
